--- a/css/style.css
+++ b/css/style.css
@@ -1202,7 +1202,7 @@ blockquote {
   height: 230px;
   width: 230px;
   border-radius: 50%;
-  background: url("img/avatar.jpeg");
+  background: url("img/avatar-temp.png");
   background-size: cover;
   margin: 0 auto; }
 .about-sec .social-icons {
