--- a/css/style.css
+++ b/css/style.css
@@ -1362,9 +1362,9 @@ blockquote {
     right: 0px;
     top: -27px; }
   .skills-sec .progress-bar-graph .bar-wrap.green-bar span {
-    background: #3AF97A; }
+    background: #01c853; }
     .skills-sec .progress-bar-graph .bar-wrap.green-bar span:after {
-      background: #3AF97A; }
+      background: #01c853; }
   .skills-sec .progress-bar-graph .bar-wrap.yellow-bar span {
     background: #fec107; }
     .skills-sec .progress-bar-graph .bar-wrap.yellow-bar span:after {
