--- a/css/style.css
+++ b/css/style.css
@@ -1170,7 +1170,7 @@ blockquote {
   left: 0;
   top: 0; }
   .bg-struct.bg-img {
-    background: url("../img/abstract-bg-2.jpg");
+    background: url("../img/abstract-bg-my-8.jpg");
     background-position: center;
     background-size: cover; }
   .bg-struct.bg-img-2 {
