--- a/css/style.css
+++ b/css/style.css
@@ -1394,6 +1394,57 @@ blockquote {
         background: #581845; }
         .skills-sec .progress-bar-graph .bar-wrap.purple-bar span:after {
           background: #581845; }
+/*Tech Bar*/
+  .skills-sec .progress-bar-graph .bar-wrap.ruby-bar span {
+    background: #A7414A; }
+    .skills-sec .progress-bar-graph .bar-wrap.ruby-bar span:after {
+      background: #A7414A; }
+  .skills-sec .progress-bar-graph .bar-wrap.black-bar span {
+    background: #282726; }
+    .skills-sec .progress-bar-graph .bar-wrap.black-bar span:after {
+      background: #282726; }
+  .skills-sec .progress-bar-graph .bar-wrap.cyangrey-bar span {
+    background: #6A8A82; }
+    .skills-sec .progress-bar-graph .bar-wrap.cyangrey-bar span:after {
+      background: #6A8A82; }
+  .skills-sec .progress-bar-graph .bar-wrap.beag-bar span {
+    background: #A37C27; }
+    .skills-sec .progress-bar-graph .bar-wrap.beag-bar span:after {
+      background: #A37C27; }
+  .skills-sec .progress-bar-graph .bar-wrap.darkorange-bar span {
+    background: #563838; }
+    .skills-sec .progress-bar-graph .bar-wrap.darkorange-bar span:after {
+      background: #563838; }
+  .skills-sec .progress-bar-graph .bar-wrap.darkblue-bar span {
+    background: #36688D; }
+    .skills-sec .progress-bar-graph .bar-wrap.darkblue-bar span:after {
+      background: #36688D; }
+/*Soft Bar*/
+      .skills-sec .progress-bar-graph .bar-wrap.s1-bar span {
+        background: #D75B66; }
+        .skills-sec .progress-bar-graph .bar-wrap.s1-bar span:after {
+          background: #D75B66; }
+      .skills-sec .progress-bar-graph .bar-wrap.s2-bar span {
+        background: #23345C; }
+        .skills-sec .progress-bar-graph .bar-wrap.s2-bar span:after {
+          background: #23345C; }
+      .skills-sec .progress-bar-graph .bar-wrap.s3-bar span {
+        background: #F1BA48; }
+        .skills-sec .progress-bar-graph .bar-wrap.s3-bar span:after {
+          background: #F1BA48; }
+      .skills-sec .progress-bar-graph .bar-wrap.s4-bar span {
+        background: #BD8A44; }
+        .skills-sec .progress-bar-graph .bar-wrap.s4-bar span:after {
+          background: #BD8A44; }
+      .skills-sec .progress-bar-graph .bar-wrap.s5-bar span {
+        background: #BFAFA0; }
+        .skills-sec .progress-bar-graph .bar-wrap.s5-bar span:after {
+          background: #BFAFA0; }
+      .skills-sec .progress-bar-graph .bar-wrap.s6-bar span {
+        background: #7B8937; }
+        .skills-sec .progress-bar-graph .bar-wrap.s6-bar span:after {
+          background: #7B8937; }
+
 .skills-sec .progress-bar-graph span {
   height: 2px;
   width: 0px;
