--- a/css/style.css
+++ b/css/style.css
@@ -1030,13 +1030,13 @@ blockquote {
       .mdl-layout__drawer .social-icons li a.facebook-link:hover i {
         color: #3b5998; }
       .mdl-layout__drawer .social-icons li a.twitter-link:hover i {
-        color: #55acee; }
+        color: #32CD32; }
       .mdl-layout__drawer .social-icons li a.linkedin-link:hover i {
         color: #007bb6; }
       .mdl-layout__drawer .social-icons li a.dribbble-link:hover i {
-        color: #ea4c89; }
+        color: #007bb6; }
       .mdl-layout__drawer .social-icons li a.instagram-link:hover i {
-        color: #3f729b; }
+        color: #e95950; }
   .mdl-layout__drawer .mdl-navigation {
     padding-top: 0; }
     .mdl-layout__drawer .mdl-navigation li .mdl-navigation__link {
@@ -1235,13 +1235,13 @@ blockquote {
     .about-sec .social-icons li a.facebook-link:hover i {
       color: #3b5998; }
     .about-sec .social-icons li a.twitter-link:hover i {
-      color: #55acee; }
+      color: #32CD32; }
     .about-sec .social-icons li a.linkedin-link:hover i {
       color: #007bb6; }
     .about-sec .social-icons li a.dribbble-link:hover i {
-      color: #ea4c89; }
+      color: #007bb6; }
     .about-sec .social-icons li a.instagram-link:hover i {
-      color: #3f729b; }
+      color: #e95950; }
 .about-sec .profile-wrap li {
   margin-bottom: 8px; }
   .about-sec .profile-wrap li:last-child {
@@ -1446,7 +1446,7 @@ blockquote {
           background: #7B8937; }
 
 .skills-sec .progress-bar-graph span {
-  height: 2px;
+  height: 4px;
   width: 0px;
   display: block;
   float: left;
@@ -1458,7 +1458,7 @@ blockquote {
     height: 13px;
     position: absolute;
     right: 0px;
-    top: -6px;
+    top: -5px;
     width: 13px; }
 
 /*Profile Sec*/
@@ -1790,13 +1790,13 @@ blockquote {
     .footer-sec .social-icons li a.facebook-link:hover i {
       color: #3b5998; }
     .footer-sec .social-icons li a.twitter-link:hover i {
-      color: #55acee; }
+      color: #32CD32; }
     .footer-sec .social-icons li a.linkedin-link:hover i {
       color: #007bb6; }
     .footer-sec .social-icons li a.dribbble-link:hover i {
-      color: #ea4c89; }
+      color: #007bb6; }
     .footer-sec .social-icons li a.instagram-link:hover i {
-      color: #3f729b; }
+      color: #e95950; }
 
 /*Navigation Sec*/
 .navigation-block a {
