--- a/css/style.css
+++ b/css/style.css
@@ -1437,9 +1437,9 @@ blockquote {
         .skills-sec .progress-bar-graph .bar-wrap.s4-bar span:after {
           background: #BD8A44; }
       .skills-sec .progress-bar-graph .bar-wrap.s5-bar span {
-        background: #BFAFA0; }
+        background: #9b59b6; }
         .skills-sec .progress-bar-graph .bar-wrap.s5-bar span:after {
-          background: #BFAFA0; }
+          background: #9b59b6; }
       .skills-sec .progress-bar-graph .bar-wrap.s6-bar span {
         background: #7B8937; }
         .skills-sec .progress-bar-graph .bar-wrap.s6-bar span:after {
