--- a/css/style.css
+++ b/css/style.css
@@ -1395,17 +1395,17 @@ blockquote {
         .skills-sec .progress-bar-graph .bar-wrap.purple-bar span:after {
           background: #581845; }
 /*Tech Bar*/
-  .skills-sec .progress-bar-graph .bar-wrap.ruby-bar span {
-    background: #A7414A; }
-    .skills-sec .progress-bar-graph .bar-wrap.ruby-bar span:after {
+  .skills-sec .progress-bar-graph .bar-wrap.t1-bar span {
+    background: #D50B53; }
+    .skills-sec .progress-bar-graph .bar-wrap.t1-bar span:after {
       background: #A7414A; }
-  .skills-sec .progress-bar-graph .bar-wrap.black-bar span {
-    background: #282726; }
-    .skills-sec .progress-bar-graph .bar-wrap.black-bar span:after {
+  .skills-sec .progress-bar-graph .bar-wrap.t2-bar span {
+    background: #328DAA; }
+    .skills-sec .progress-bar-graph .bar-wrap.t2-bar span:after {
       background: #282726; }
-  .skills-sec .progress-bar-graph .bar-wrap.cyangrey-bar span {
-    background: #6A8A82; }
-    .skills-sec .progress-bar-graph .bar-wrap.cyangrey-bar span:after {
+  .skills-sec .progress-bar-graph .bar-wrap.t3-bar span {
+    background: #704307; }
+    .skills-sec .progress-bar-graph .bar-wrap.t3-bar span:after {
       background: #6A8A82; }
   .skills-sec .progress-bar-graph .bar-wrap.beag-bar span {
     background: #A37C27; }
@@ -1425,7 +1425,7 @@ blockquote {
         .skills-sec .progress-bar-graph .bar-wrap.s1-bar span:after {
           background: #D75B66; }
       .skills-sec .progress-bar-graph .bar-wrap.s2-bar span {
-        background: #23345C; }
+        background: #BED905; }
         .skills-sec .progress-bar-graph .bar-wrap.s2-bar span:after {
           background: #23345C; }
       .skills-sec .progress-bar-graph .bar-wrap.s3-bar span {
@@ -2023,3 +2023,7 @@ blockquote {
     left: -25px; } }
 
 /*# sourceMappingURL=style.css.map */
+.modalImages {
+  max-width: 100%;
+  height: auto;
+}
