--- a/css/style.css
+++ b/css/style.css
@@ -1397,17 +1397,20 @@ blockquote {
 /*Tech Bar*/
   .skills-sec .progress-bar-graph .bar-wrap.t1-bar span {
     /*background: #CF6766; }*/
-    background: linear-gradient(to right, #F58D8C 90%, #C25A59 100%); }
+    background: linear-gradient(to right, #F58D8C 90%, #C25A59 100%);
+    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25) inset;}
     .skills-sec .progress-bar-graph .bar-wrap.t1-bar span:after {
       background: #A7414A; }
   .skills-sec .progress-bar-graph .bar-wrap.t2-bar span {
     /*background: #30415D; }*/
-    background: linear-gradient(to right, #566783 90%, #233450 100%); }
+    background: linear-gradient(to right, #566783 90%, #233450 100%);
+    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25) inset;}
     .skills-sec .progress-bar-graph .bar-wrap.t2-bar span:after {
       background: #282726; }
   .skills-sec .progress-bar-graph .bar-wrap.t3-bar span {
     /*background: #3F3250; }*/
-    background: linear-gradient(to right, #655876 90%, #322543 100%); }
+    background: linear-gradient(to right, #655876 90%, #322543 100%);
+    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25) inset;}
     .skills-sec .progress-bar-graph .bar-wrap.t3-bar span:after {
       background: #6A8A82; }
   .skills-sec .progress-bar-graph .bar-wrap.beag-bar span {
